--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   provider: ^4.0.4
   http: ^0.12.0+4
+  get: ^3.4.3
 
 dev_dependencies:
   flutter_test:
